--- a/translations/en.json
+++ b/translations/en.json
@@ -5,5 +5,6 @@
   "PIJP": "Polish Air Quality Index",
   "CAQI": "Common Air Quality Index",
   "AIRLY_CAQI": "Airly Common Air Quality Index",
-  "lastCheck": "Last check: "
+  "lastCheck": "Last check: ",
+  "of": "of"
 }
